# amazon-kinesis-video-streams-media-interface

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  build-issue.md  question.md
.github/workflows/: amlogic-c302.yml  anyka-ak3918.yml  cmake.yml  develop.yml  ecr-prepare.yml  eeasy-sv82x.yml  file.yml  fullhan-fh8626v100.yml  gstreamer.yml  ingenic-t31.yml  main.yml  qualcomm-qcs610.yml  v4l2.yml  x64.yml
CMake/: AK3918.cmake  C302.cmake  FH8626V100.cmake  FILE.cmake  GSTREAMER.cmake  QCS610.cmake  SV82x.cmake  T31.cmake  T41.cmake  V4L2.cmake
doc/: guide.md  guide_cn.md
doc/markdown/: latency.md  memory.md
include/com/amazonaws/kinesis/video/capability/: AudioCapability.h  VideoCapability.h
include/com/amazonaws/kinesis/video/capturer/: AudioCapturer.h  VideoCapturer.h
include/com/amazonaws/kinesis/video/player/: AudioPlayer.h
resources/frames/aac/: frame-001.aac  frame-002.aac  frame-003.aac  frame-005.aac  frame-006.aac  frame-007.aac  frame-008.aac  frame-009.aac  frame-010.aac  frame-011.aac  frame-012.aac  frame-013.aac  frame-014.aac  frame-015.aac  frame-016.aac  frame-017.aac  frame-018.aac  frame-019.aac  frame-020.aac  frame-021.aac  frame-022.aac  frame-023.aac  frame-024.aac  frame-025.aac  frame-026.aac  frame-027.aac  frame-028.aac  frame-029.aac  frame-030.aac  frame-031.aac  frame-032.aac  frame-033.aac  frame-034.aac  frame-035.aac  frame-036.aac  frame-037.aac  frame-038.aac  frame-039.aac  frame-040.aac  frame-041.aac  (+719 more)
resources/frames/g711a/: README.md  frame-002.alaw  frame-003.alaw  frame-004.alaw  frame-005.alaw  frame-006.alaw  frame-007.alaw  frame-008.alaw  frame-009.alaw  frame-010.alaw  frame-011.alaw  frame-012.alaw  frame-013.alaw  frame-014.alaw  frame-015.alaw  frame-016.alaw  frame-017.alaw  frame-018.alaw  frame-019.alaw  frame-020.alaw  frame-021.alaw  frame-022.alaw  frame-023.alaw  frame-024.alaw  frame-025.alaw  frame-026.alaw  frame-027.alaw  frame-028.alaw  frame-029.alaw  frame-030.alaw  frame-031.alaw  frame-032.alaw  frame-033.alaw  frame-034.alaw  frame-035.alaw  frame-036.alaw  frame-037.alaw  frame-038.alaw  frame-039.alaw  frame-040.alaw  (+959 more)
resources/frames/h264/: frame-001.h264  frame-002.h264  frame-003.h264  frame-004.h264  frame-005.h264  frame-006.h264  frame-007.h264  frame-008.h264  frame-009.h264  frame-010.h264  frame-011.h264  frame-012.h264  frame-013.h264  frame-014.h264  frame-015.h264  frame-016.h264  frame-017.h264  frame-018.h264  frame-019.h264  frame-020.h264  frame-021.h264  frame-022.h264  frame-023.h264  frame-024.h264  frame-025.h264  frame-026.h264  frame-027.h264  frame-028.h264  frame-029.h264  frame-030.h264  frame-031.h264  frame-032.h264  frame-033.h264  frame-034.h264  frame-035.h264  frame-036.h264  frame-037.h264  frame-038.h264  frame-039.h264  frame-040.h264  (+200 more)
samples/kvs/: CMakeLists.txt
samples/kvs/source/: kvsappcli.c  option_configuration.c  option_configuration.h  sample_config.h
samples/kvsproducer/: CMakeLists.txt
samples/kvsproducer/source/: kvsappcli.c  sample_config.h
samples/saveframe/: CMakeLists.txt
samples/saveframe/source/: saveframe.c
samples/webrtc/: CMakeLists.txt
samples/webrtc/patches/: 0001-cmake-allow-user-to-specify-OPEN_SRC_INSTALL_PREFIX.patch  0002-ram-optimization-reduce-rolling-buffer-and-jitter-bu.patch  webrtc-patch-manager.sh
samples/webrtc/source/: Common.c  Samples.h  kvsWebRTCClientMaster.c
source/: T31AudioCapturer.c  T31Common.h  T31VideoCapturer.c
source/AK3918/: AK3918AudioCapturer.c  AK3918AudioPlayer.c  AK3918Common.h  AK3918VideoCapturer.c
source/C302/: C302AudioCapturer.c  C302AudioPlayer.c  C302Common.h  C302VideoCapturer.c
source/FH8626V100/: FH8626V100AudioCapturer.c  FH8626V100AudioPlayer.c  FH8626V100Common.h  FH8626V100VideoCapturer.c
source/FILE/: FILEAudioCapturer.c  FILEAudioPlayer.c  FILECommon.h  FILEVideoCapturer.c
source/GSTREAMER/: GSTREAMERAudioCapturer.c  GSTREAMERAudioPlayer.c  GSTREAMERCommon.h  GSTREAMERVideoCapturer.c
source/SV82x/: SV82xAudioCapturer.c  SV82xAudioPlayer.c  SV82xCommon.h  SV82xVideoCapturer.c
source/T31/: T31AudioCapturer.c  T31AudioPlayer.c  T31Common.h  T31VideoCapturer.c
source/T41/: T41AudioCapturer.c  T41AudioPlayer.c  T41Common.h  T41VideoCapturer.c
source/V4L2/: V4L2AudioCapturer.c  V4L2AudioPlayer.c  V4L2Common.h  V4L2VideoCapturer.c
